Rebrand to ExamFlow and enhance UI/UX
Renamed the application to ExamFlow across configuration, package files, and UI. Updated the app icon and replaced the logo. Improved the main layout and dashboard with a modern, responsive design, added icons, and enhanced navigation. Refined help and documentation pages, clarified data formats, and explained constraints and relaxations. Improved default time slot generation logic and added type declarations for image imports. Minor database migration for new violations_json column.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.electron.app
-productName: se302-project
+appId: com.examflow.app
+productName: ExamFlow
 directories:
   buildResources: build
 files:
@@ -11,8 +11,10 @@ files:
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
 asarUnpack:
   - resources/**
+icon: resources/icon.png
 win:
-  executableName: se302-project
+  executableName: ExamFlow
+  icon: resources/icon.png
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
