--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "exam-tracker",
+  "name": "examflow",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "description": "ExamFlow - Intelligent Exam Scheduling System",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
