--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -15,6 +15,8 @@ icon: resources/icon.png
 win:
   executableName: ExamFlow
   icon: resources/icon.png
+  signAndEditExecutable: false
+  sign: null
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
