Add export to CSV/PDF and update Electron IPC/file handling
Implemented CSV and PDF export functionality in ScheduleView with new export buttons and view selection. Added IPC handlers in the main process for database and file operations, including file dialogs and export logic. Updated preload to expose new APIs, switched router to HashRouter, and improved Help page with export instructions. Updated electron-builder config to use new icon paths and added installer options.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -2,6 +2,7 @@ appId: com.examflow.app
 productName: ExamFlow
 directories:
   buildResources: build
+icon: build/icon.png
 files:
   - '!**/.vscode/*'
   - '!src/*'
@@ -11,10 +12,9 @@ files:
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
 asarUnpack:
   - resources/**
-icon: resources/icon.png
 win:
   executableName: ExamFlow
-  icon: resources/icon.png
+  icon: build/icon.png
   signAndEditExecutable: false
   sign: null
 nsis:
@@ -22,7 +22,11 @@ nsis:
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
+  oneClick: false
+  allowToChangeInstallationDirectory: true
+  allowElevation: true
 mac:
+  icon: build/icon.icns
   entitlementsInherit: build/entitlements.mac.plist
   extendInfo:
     - NSCameraUsageDescription: Application requests access to the device's camera.
@@ -39,6 +43,7 @@ linux:
     - deb
   maintainer: electronjs.org
   category: Utility
+  icon: build/icon.png
 appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
