Update app icon and improve layout spacing
Switched Windows build icon from PNG to ICO in electron-builder config and replaced the icon file. Enhanced the Layout component's navigation bar with increased padding, larger logo, and more spacious navigation items for a cleaner UI.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -2,7 +2,6 @@ appId: com.examflow.app
 productName: ExamFlow
 directories:
   buildResources: build
-icon: build/icon.png
 files:
   - '!**/.vscode/*'
   - '!src/*'
@@ -14,7 +13,7 @@ asarUnpack:
   - resources/**
 win:
   executableName: ExamFlow
-  icon: build/icon.png
+  icon: build/icon.ico
   signAndEditExecutable: false
   sign: null
 nsis:
